plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}+${project.minecraft_version}"
}

repositories {
	// MODMENU
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	// YACL
	maven {
		name 'Xander Maven'
		url 'https://maven.isxander.dev/releases'
	}
	// ACCESSORIES
	maven { url 'https://maven.wispforest.io/releases' }
	maven { url 'https://maven.su5ed.dev/releases' }
	maven { url 'https://maven.fabricmc.net' }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"elytra-revamped-rerewritten" {
			sourceSet sourceSets.client
			sourceSet sourceSets.main
		}
	}

}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// MODMENU
	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")

	// YACL
	modImplementation("dev.isxander:yet-another-config-lib:${project.yacl_version}")

	// ACCESSORIES
	modCompileOnly("io.wispforest:accessories-fabric:${project.accessories_version}")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}



tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}

	from(sourceSets.main.output)
	from(sourceSets.client.output)
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
